--- a/src/app/tab2/search/search.component.html
+++ b/src/app/tab2/search/search.component.html
@@ -1,3 +1,39 @@
-<p>
-  search works!
-</p>
+<div class="filterContainer">
+  <div class="filterForm">
+    <div class="filterItem">
+      <input type="radio"/>
+      <label>Name</label>
+    </div>
+    <div class="filterItem">
+      <input type="radio"/>
+      <label>Artist</label>
+    </div>
+    <div class="filterItem">
+      <input type="radio"/>
+      <label>Date</label>
+    </div>
+
+    <div class="filterItem">
+      <input  type="text" placeholder="Search"/>
+      <button>Search</button>
+    </div>
+  </div>
+  <div>
+    <div *ngIf="this.songs.length == 0">
+      <h1 class="text-center">No hay canciones</h1>
+    </div>
+    <div *ngIf="this.songs.length > 0">  
+      <ion-list>
+        <ion-item *ngFor="let song of songs">
+          <ion-avatar slot="start">
+            <img [src]="song.images[0]">
+          </ion-avatar>
+          <ion-label>
+            <h2>{{ song.name }}</h2>
+            <p>{{ song.artist }}</p>
+          </ion-label>
+        </ion-item>
+      </ion-list>
+    </div>
+  </div>
+</div>
