--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -3,6 +3,16 @@
     <ion-title>
       List
     </ion-title>
+    <ion-buttons *ngIf="this.isLogged" slot="end">
+      <ion-button (click)="goToInsertSong()">
+        Insert song 
+        <ion-icon name="add-outline"></ion-icon>
+      </ion-button>
+      <ion-button (click)="logout()">
+        Logout 
+        <ion-icon name="log-out-outline"></ion-icon>
+      </ion-button>
+    </ion-buttons>
   </ion-toolbar>
 </ion-header>
 
