--- a/src/app/tab1/tab1.page.html
+++ b/src/app/tab1/tab1.page.html
@@ -4,7 +4,7 @@
       List
     </ion-title>
     <ion-buttons *ngIf="this.isLogged" slot="end">
-      <ion-button (click)="goToInsertSong()">
+      <ion-button id="insertBtn" (click)="goToInsertSong()">
         Insert song 
         <ion-icon name="add-outline"></ion-icon>
       </ion-button>
