--- a/src/app/tab1/comments/comments.component.html
+++ b/src/app/tab1/comments/comments.component.html
@@ -1,6 +1,6 @@
 <section>
-  <article>
-    <h2>Add comment</h2>
+  <article class="addCmtArt">
+    <h2>Add Comment</h2>
     <ion-item>
       <ion-label position="floating">Author</ion-label>
       <ion-input [(ngModel)]="author" type="text" aria-label="Autor"></ion-input>
@@ -16,18 +16,23 @@
     </ion-item>
     <ion-button (click)="sendComment()">Add</ion-button>
   </article>
-  <article>
+  <article style="width:500px;">
     <h2>Comments</h2>
     <ion-list>
       <ion-item *ngFor="let comment of comments">
-        <ion-label>
-          <h3>@{{comment.author}}</h3>
-          <p>{{comment.commentText}}</p>
-          <p>{{comment.stars}}</p>
-        </ion-label>
-        <ion-fab-button *ngIf="hideDelete" color="danger" size="small" (click)="handleDeleteAlert(comment._id!)">
-          <ion-icon name="close-circle"></ion-icon>
-        </ion-fab-button>
+        <ion-card style="width:100%;">
+          <ion-header>
+            <ion-card-subtitle>Author: {{comment.author}}</ion-card-subtitle>
+            <ion-card-title>{{comment.commentText}}</ion-card-title>
+          </ion-header>
+          <ion-card-content>
+            {{comment.stars}} stars
+          </ion-card-content>
+          <ion-button *ngIf="!hideDelete" color="danger" (click)="handleDeleteAlert(comment._id!)">
+            Delete
+          </ion-button>
+        </ion-card>
+        
       </ion-item>
     </ion-list>
   </article>
